--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="mailto:maniknatas460@gmail.com"><i class='bx bxl-gmail'></i></a>
                 <a href="https://github.com/mani042000" target="_blank"><i class='bx bxl-github'></i></a> 
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.instagram.com/mr_fool_1904?igsh=YzljYTk1ODg3Zg=="><i class='bx bxl-instagram'></i></a>
             </div>
 
             <a href="#" class="btn">Download CV</a>
@@ -319,9 +319,9 @@
             <div class="portfolio-item figma">
                 <img src="./Capture 2 (1).PNG" alt="Project 3">
                 <div class="overlay">
-                    <a href="https://www.figma.com/proto/U3EwCLku4JJdcDDcXr4T
-                    JR/Untitled?node-id=127-3&starting-point-node-id=1%3A7&t=boopTEF
-                    GdoNdzdH8-1" class="btn">Visit Website</a>
+                    <a href="https://www.figma.com/proto/U3EwCLku4JJdcDDcXr4TJR/Untitled?page-id=0%3A1&node-id=1-7&p=
+                    f&viewport=182%2C397%2C0.12&t=reS0lxp5DCagkVkE-1&scaling=scale-down&content-scaling=fixe
+                    d&starting-point-node-id=1%3A7&show-proto-sidebar=1" class="btn">Visit Website</a>
                 </div>
                 <h3>Figma</h3> 
             </div>
@@ -457,7 +457,11 @@
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-        
+        <h1> Name: Manikanta</h1>
+        <p> Ph: 6303589849</p>
+        <p> Mail: maniknatas460@gmail.com</p>
+
+
         </div>
 
         <div class="footer-iconTop">
