--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="https://www.instagram.com/mr_fool_1904?igsh=YzljYTk1ODg3Zg=="><i class='bx bxl-instagram'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1EqWekZ0YmPnyAjc8qwMAvAyM3QGGADVf/view?usp=sharing"class="btn">Download Resume</a>
         </div>
 
         <div class="profession-container">
@@ -326,13 +326,12 @@
                 <h3>Figma</h3> 
             </div>
             <div class="portfolio-item figma">
-                <img src="" alt="Project 3">
+                <img src="./netifix figma.JPG" alt="figma">
                 <div class="overlay">
-                    <a href="https://www.figma.com/proto/U3EwCLku4JJdcDDcXr4T
-                    JR/Untitled?node-id=127-3&starting-point-node-id=1%3A7&t=boopTEF
-                    GdoNdzdH8-1" class="btn">Visit Website</a>
+                    <a href="https://www.figma.com/design/qVfZlrK5G904YNzNGXeShU/Net
+                    flix--Community-?node-id=0-1&t=V8txUpwrFjwalhlK-1"  class="btn">Visit Website</a>
                 </div>
-                <h3>Project 3</h3>
+                <h3>Figma</h3>
         </div> 
     </section>   
 
