--- a/index.html
+++ b/index.html
@@ -328,8 +328,9 @@
             <div class="portfolio-item figma">
                 <img src="./netifix figma.JPG" alt="figma">
                 <div class="overlay">
-                    <a href="https://www.figma.com/design/qVfZlrK5G904YNzNGXeShU/Net
-                    flix--Community-?node-id=0-1&t=V8txUpwrFjwalhlK-1"  class="btn">Visit Website</a>
+                    <a href="https://www.figma.com/proto/qVfZlrK5G904YNzNGXeShU/Netflix--Community-?node-id=1-
+                    46&t=yXvr8UqIAheE5zRX-1&sca
+                    ling=scale-down&content-scaling=fixed&page-id=0%3A1"  class="btn">Visit Website</a>
                 </div>
                 <h3>Figma</h3>
         </div> 
